nestedtemplates/vnet.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "East US",
            "allowedValues": [
                "Central US",
                "East US 2",
                "West US",
                "North Central US",
                "South Central US",
                "West Central US",
                "West US 2"
            ],
            "metadata": {
                "description": "Location for all resources"
            }
        },
        "vnetResourceName": {
            "type": "string",
            "metadata": {
                "description": "The name of the vnet"
            }
        },
        "vnetAddressRange": {
            "type": "string",
            "metadata": {
                "description": "Address range of the virtual network"
            }
        },
        "subnetName": {
            "type": "string",
            "metadata": {
                "description": "Subnet name that will contain the App Service Environment"
            }
        },
        "aseSubnetAddressRange": {
            "type": "string",
            "metadata": {
                "description": "Address range that will be used by the App Service Environment"
            }
        },
        "azfwSubnetAddressRange":{
            "type":"string",
            "metadata": {
                "description": "Address range that will be used by the Azure Firewall Subnet"
            }
        },
        "rebuildVNET": {
            "type": "string",
            "metadata": {"description":"Whether to rebuild the VNET (yes) or not (no)"},
            "defaultValue": "No"
        },
        "vnetResourceGroupName":{
            "type": "string",
            "metadata": {"description":"Resource Group where VNET is created"},
            "defaultValue": "No"
        },
        "aseName":{
            "type":"string",
            "metadata": {"description":"ASE name"},
            "defaultValue": "No"
        }
    },
    "variables": {
        "nsgName": "[concat(parameters('vnetResourceName'), '-', parameters('subnetName'), '-ase-mgmt-nsg')]",
        "nsgId": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
        "subnetRouteTableName":"[concat(parameters('subnetName'), '-routeTable')]",
        "azfwRouteTableName": "AzureFirewallSubnet-RouteTable",
        "azfwName":"[concat(parameters('aseName'),'-firewall')]",
        "azfwPublicIp":"[concat(variables('azfwName'),'-pip')]",
        "azPrivateIpArray":"[split(parameters('azfwSubnetAddressRange'),'.')]",
        "azPrivateIp":"[concat(variables('azPrivateIpArray')[0],variables('azPrivateIpArray')[1],variables('azPrivateIpArray')[3],'4')]"
        },
    "resources": [
        {
            "apiVersion": "2018-04-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "[parameters('location')]",
            "name": "[variables('nsgName')]",
            "tags": {
                "displayName": "Deploy NSG"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Inbound-management",
                        "properties": {
                            "description": "Used to manage ASE from public VIP",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "454-455",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "70.37.57.58",
                                "157.55.208.185",
                                "52.174.22.21",
                                "13.94.149.179",
                                "13.94.143.126",
                                "13.94.141.115",
                                "52.178.195.197",
                                "52.178.190.65",
                                "52.178.184.149",
                                "52.178.177.147",
                                "13.75.127.117",
                                "40.83.125.161",
                                "40.83.121.56",
                                "40.83.120.64",
                                "52.187.56.50",
                                "52.187.63.37",
                                "52.187.59.251",
                                "52.187.63.19",
                                "52.165.158.140",
                                "52.165.152.214",
                                "52.165.154.193",
                                "52.165.153.122",
                                "104.44.129.255",
                                "104.44.134.255",
                                "104.44.129.243",
                                "104.44.129.141",
                                "23.102.188.65",
                                "191.236.154.88",
                                "13.64.115.203",
                                "65.52.193.203",
                                "70.37.89.222",
                                "52.224.105.172",
                                "23.102.135.246",
                                "52.225.177.153",
                                "65.52.172.237",
                                "52.151.25.45",
                                "40.124.47.188"
                                                           ],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ASE-internal-inbound",
                        "properties": {
                            "description": "ASE-internal-inbound",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "192.168.250.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbound-HTTP",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbount-HTTPS",
                        "properties": {
                            "description": "Allow HTTPS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbound-FTP",
                        "properties": {
                            "description": "Allow FTP over port 21",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "21",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbound-FTPS",
                        "properties": {
                            "description": "Allow FTPS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "990",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbound-FTP-Data",
                        "properties": {
                            "description": "RDP",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "10001-10020",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbound-Remote-Debugging",
                        "properties": {
                            "description": "Visual Studio remote debugging",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4016-4022",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 170,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-443",
                        "properties": {
                            "description": "Azure Storage blob",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-SMB",
                        "properties": {
                            "description": "Azure Storage queue",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "445",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-DB",
                        "properties": {
                            "description": "Database",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-DB2",
                        "properties": {
                            "description": "Database 2",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "11000-11999",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-DB3",
                        "properties": {
                            "description": "Database 3",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "14000-14999",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-DNS",
                        "properties": {
                            "description": "DNS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ASE-internal-outbound",
                        "properties": {
                            "description": "Azure Storage queue",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "192.168.250.0/24",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Outbound-80",
                        "properties": {
                            "description": "Outbound 80",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 170,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ASE-to-VNET",
                        "properties": {
                            "description": "ASE to VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "192.168.250.0/23",
                            "access": "Allow",
                            "priority": 180,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('subnetRouteTableName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "Deploy ASE UDR"
            },
            "properties": {
                "routes": [
                    {
                        "Name":  "70.37.57.58-route",
                        "properties":  {
                                           "addressPrefix":  "70.37.57.58/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "157.55.208.185-route",
                        "properties":  {
                                           "addressPrefix":  "157.55.208.185/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.174.22.21-route",
                        "properties":  {
                                           "addressPrefix":  "52.174.22.21/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "13.94.149.179-route",
                        "properties":  {
                                           "addressPrefix":  "13.94.149.179/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "13.94.143.126-route",
                        "properties":  {
                                           "addressPrefix":  "13.94.143.126/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "13.94.141.115-route",
                        "properties":  {
                                           "addressPrefix":  "13.94.141.115/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.178.195.197-route",
                        "properties":  {
                                           "addressPrefix":  "52.178.195.197/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.178.190.65-route",
                        "properties":  {
                                           "addressPrefix":  "52.178.190.65/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.178.184.149-route",
                        "properties":  {
                                           "addressPrefix":  "52.178.184.149/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.178.177.147-route",
                        "properties":  {
                                           "addressPrefix":  "52.178.177.147/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "13.75.127.117-route",
                        "properties":  {
                                           "addressPrefix":  "13.75.127.117/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "40.83.125.161-route",
                        "properties":  {
                                           "addressPrefix":  "40.83.125.161/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "40.83.121.56-route",
                        "properties":  {
                                           "addressPrefix":  "40.83.121.56/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "40.83.120.64-route",
                        "properties":  {
                                           "addressPrefix":  "40.83.120.64/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.187.56.50-route",
                        "properties":  {
                                           "addressPrefix":  "52.187.56.50/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.187.63.37-route",
                        "properties":  {
                                           "addressPrefix":  "52.187.63.37/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.187.59.251-route",
                        "properties":  {
                                           "addressPrefix":  "52.187.59.251/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.187.63.19-route",
                        "properties":  {
                                           "addressPrefix":  "52.187.63.19/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.165.158.140-route",
                        "properties":  {
                                           "addressPrefix":  "52.165.158.140/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.165.152.214-route",
                        "properties":  {
                                           "addressPrefix":  "52.165.152.214/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.165.154.193-route",
                        "properties":  {
                                           "addressPrefix":  "52.165.154.193/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.165.153.122-route",
                        "properties":  {
                                           "addressPrefix":  "52.165.153.122/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "104.44.129.255-route",
                        "properties":  {
                                           "addressPrefix":  "104.44.129.255/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "104.44.134.255-route",
                        "properties":  {
                                           "addressPrefix":  "104.44.134.255/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "104.44.129.243-route",
                        "properties":  {
                                           "addressPrefix":  "104.44.129.243/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "104.44.129.141-route",
                        "properties":  {
                                           "addressPrefix":  "104.44.129.141/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "23.102.188.65-route",
                        "properties":  {
                                           "addressPrefix":  "23.102.188.65/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "191.236.154.88-route",
                        "properties":  {
                                           "addressPrefix":  "191.236.154.88/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "13.64.115.203-route",
                        "properties":  {
                                           "addressPrefix":  "13.64.115.203/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "65.52.193.203-route",
                        "properties":  {
                                           "addressPrefix":  "65.52.193.203/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "70.37.89.222-route",
                        "properties":  {
                                           "addressPrefix":  "70.37.89.222/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.224.105.172-route",
                        "properties":  {
                                           "addressPrefix":  "52.224.105.172/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "23.102.135.246-route",
                        "properties":  {
                                           "addressPrefix":  "23.102.135.246/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.225.177.153-route",
                        "properties":  {
                                           "addressPrefix":  "52.225.177.153/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "65.52.172.237-route",
                        "properties":  {
                                           "addressPrefix":  "65.52.172.237/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "52.151.25.45-route",
                        "properties":  {
                                           "addressPrefix":  "52.151.25.45/32",
                                           "nextHopType":  "Internet"
                                       }
                    },
                    {
                        "Name":  "40.124.47.188-route",
                        "properties":  {
                                           "addressPrefix":  "40.124.47.188/32",
                                           "nextHopType":  "Internet"
                                       }
                    }
                ]                
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('azfwRouteTableName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "Deploy Azure Firewall UDR"
            },
            "properties": {
                "routes": [
                    {
                        "name": "default-route",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "Internet"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-06-01",
            "type": "Microsoft.Network/virtualNetworks",
            "condition": "[equals(parameters('rebuildVNET'),'Yes')]",
            "name": "[parameters('vnetResourceName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "Deploy VNet"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('vnetAddressRange')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('aseSubnetAddressRange')]",
                            "networkSecurityGroup": {
                                "id": "[variables('nsgId')]"
                            },
                            "routeTable":{
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('subnetRouteTableName'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Storage"
                                },
                                {
                                    "service": "Microsoft.Sql"
                                },
                                {
                                    "service": "Microsoft.EventHub"
                                }
                            ]
                        }
                    },
                    {
                        "name": "AzureFirewallSubnet",
                        "properties": {
                            "addressPrefix": "[parameters('azfwSubnetAddressRange')]",
                            "routeTable":{
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('azfwRouteTableName'))]"
                            },
                            "serviceEndpoints": [
                            ]
                        }
                    }
                ]
            },
            "dependsOn": [
                "[variables('nsgId')]",
                "[resourceId('Microsoft.Network/routeTables', variables('subnetRouteTableName'))]",
                "[resourceId('Microsoft.Network/routeTables',variables('azfwRouteTableName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Standard"
            },
            "name": "[variables('azfwPublicIp')]",
            "apiVersion": "2018-08-01",
            "location": "[parameters('location')]",
            "tags": {},
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/azureFirewalls",
            "name": "[variables('azfwName')]",
            "apiVersion": "2018-12-01",
            "location": "[parameters('location')]",
            "tags": {},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "IpConf",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets',parameters('vnetResourceName'),'AzureFirewallSubnet')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/publicIpAddresses', variables('azfwPublicIp'))]"
                            }
                        }
                    }
                ],
                "ApplicationRuleCollections" : [
                    {
                      "Name": "AppServiceEnvironment",
                      "properties":{
                      "Priority": 500,
                      "Action": {
                        "Type": "Allow"
                      },
                      "Rules": [
                        {
                          "Name": "ASE",
                          "Description": null,
                          "SourceAddresses": [],
                          "TargetFqdns": [],
                          "FqdnTags": [
                            "WindowsUpdate",
                            "AppServiceEnvironment"
                          ],
                          "Protocols": [
                            {
                              "ProtocolType": "Http",
                              "Port": 80
                            },
                            {
                              "ProtocolType": "Https",
                              "Port": 443
                            }
                          ]
                        }
                      ]
                    }
                }
                  ],
                  "NetworkRuleCollections"     : [
                    {
                      "Name": "Time-Diagnostics",
                      "properties":{
                      "Priority": 300,
                      "Action": {
                        "Type": "Allow"
                      },
                      "Rules": [
                        {
                          "Name": "Time",
                          "Description": null,
                          "Protocols": [
                            "Any"
                          ],
                          "SourceAddresses": [
                            "*"
                          ],
                          "DestinationAddresses": [
                            "*"
                          ],
                          "DestinationPorts": [
                            "123"
                          ]
                        },
                        {
                          "Name": "Diagnostics",
                          "Description": null,
                          "Protocols": [
                            "Any"
                          ],
                          "SourceAddresses": [
                            "*"
                          ],
                          "DestinationAddresses": [
                            "*"
                          ],
                          "DestinationPorts": [
                            "12000"
                          ]
                        }
                      ]
                    }
                }
                  ],
                  "natRuleCollections": []
            },
            "dependsOn": [
                "[resourceId(parameters('vnetResourceGroupName'), 'Microsoft.Network/publicIpAddresses', variables('azfwPublicIp'))]"
            ]
        }
    ],
    "outputs": {
        "AzureFWName":{
            "type":"string",
            "value":"[variables('azfwName')]"
        }
    }
}
